<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.clover.ui.UpdateUserNickActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/toolbar_layout"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/about_top_bg"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/nick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:text="@string/add_nick"/>
            <EditText
                android:id="@+id/updateNick"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_toRightOf="@id/nick"
                android:layout_marginLeft="15dp"
                android:background="@color/transparent"
                android:hint="@string/inputnick"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/finishNick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:background="@drawable/btn_login_selector"
                android:textColor="#fff"
                android:text="@string/finish"/>
        </RelativeLayout>
        </LinearLayout>




</RelativeLayout>
