<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.clover.ui.ChangePasswordActivity">

    <include layout="@layout/toolbar_layout"
        android:layout_gravity="top"
        android:layout_alignParentTop="true"
        android:layout_height="46dp"
        android:layout_width="fill_parent"
        android:id="@+id/layout_toolbar"/>
<!--
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_marginTop="@dimen/register_margin"
        android:layout_marginLeft="@dimen/register_margin"
        android:layout_marginRight="@dimen/register_margin"
        android:background="@drawable/base_edit_input" >

        <TextView
            android:textColor="@color/base_color_text_black"
            android:layout_width="wrap_content"
            android:background="@color/transparent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/oldpassword"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/oldpassword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/register_margin"
            android:background="@color/transparent"
            android:inputType="textPassword"
            android:hint="@string/inputoldpassword" />
    </LinearLayout>
-->
    <LinearLayout  android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_marginTop="@dimen/register_margin"
        android:layout_marginLeft="@dimen/register_margin"
        android:layout_marginRight="@dimen/register_margin"
        android:background="@drawable/base_edit_input"  >

        <TextView
            android:textColor="@color/base_color_text_black"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/newpaswword"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/newpassword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/register_margin"
            android:background="@color/transparent"
            android:inputType="textPassword"
            android:hint="@string/inputnewpassword" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_marginTop="@dimen/register_margin"
        android:layout_marginLeft="@dimen/register_margin"
        android:layout_marginRight="@dimen/register_margin"
        android:background="@drawable/base_edit_input"  >

        <TextView
            android:textColor="@color/base_color_text_black"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/repeatnewpsd"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/repeatnewpsd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/register_margin"
            android:background="@color/transparent"
            android:inputType="textPassword"
            android:hint="@string/repeatnewpassword" />
    </LinearLayout>

    <Button
        android:id="@+id/finish"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_login_selector"
        android:text="@string/finish"
        android:textColor="@color/base_color_text_white"
        android:textSize="@dimen/text_size_large" />

</LinearLayout>
